# demo-factura

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  reorganización del código.md  requirements.txt
app/: configuracion.py  database.py  database_v2.py  document_reference.py  gui.py  gui_fix.py  gui_fix_v3.py  gui_fix_v4.py  gui_fix_v5.py  integracion_dian.py  notas.py  reportes.py  validacion.py  xml_generator.py
app/controllers/: notas_controller.py
app/models/: database.py  nota.py
app/views/: notas_view.py
databases/: CREATE TABLE IF NOT EXISTS notas_credito.sql  base_datos_MySQL.sql  crear_tablas.sql  sql_estructura_bd.sql
docs/: api.md  arquitectura.md  desarrollo.md  instalacion.md  modelos_datos.md  usuario.md
notas/: forms.py  models.py  urls.py  utils.py  views.py
notas/migrations/: 0001_initial.py
notas_dian/: asgi.py  settings.py  urls.py  wsgi.py
reportes/: reporte_notas_2025-05-05_a_2025-05-07.xlsx  reporte_notas_2025-06-01_a_2025-07-18.xlsx  reporte_notas_2025-07-18_a_2025-07-18.xlsx
static/css/: style.css
static/js/: scripts.js
templates/: base.html
templates/notas/: consulta.html  nota_form.html  reportes.html
